--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 	<title>MIDI Recorder</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 	<link rel="manifest" href="/site.webmanifest">
 	<meta name="apple-mobile-web-app-title" content="JazzJam">
 	<meta name="application-name" content="JazzJam">
