Update Website Icon

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 	<title>MIDI Recorder</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="https://t4.ftcdn.net/jpg/03/51/20/39/240_F_351203909_Ylk0KUOOBR8IKwurq6KbZyYufzDjZrqx.jpg">
 	<link rel="manifest" href="/site.webmanifest">
 	<meta name="apple-mobile-web-app-title" content="JazzJam">
 	<meta name="application-name" content="JazzJam">
