--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
 			<ul>
 			<li>Fix color</li>
 			<li>Sync backing track with start of recording</li>
+			<li>Add sound when recording</li>
 			</ul>
 		</div>
 		<div class="row">
@@ -44,7 +45,6 @@
 				<li><a class="tabs" data-id="donnalee">Donna Lee</a></li>
 				<li><a class="tabs" data-id="giantsteps">Giant Steps</a></li>
 				<li><a class="tabs" data-id="justfriends">Just Friends</a></li>
-				<li><a class="tabs" data-id="Recordame">Recordame</a></li>
 				</div>
 			</ul>
 			</div>
@@ -53,8 +53,8 @@
 				<div class="panel" id="afoggyday" onclick="setBPM(130)">
 					<figure>
 						<figcaption>Listen for a bit:</figcaption>
-						<audio controls id="audioPlayer" src="https://github.com/1618lip/JazzMIDIJam/raw/main/BackingTracks/A_Foggy_Day.mp3">
-							<a href="https://github.com/1618lip/JazzMIDIJam/raw/main/BackingTracks/A_Foggy_Day.mp3"> Download audio </a>
+						<audio controls id="audioPlayer" src="https://github.com/1618lip/BackingTracks/raw/main/BackingTracks/A_Foggy_Day.mp3">
+							<a href="https://github.com/1618lip/BackingTracks/raw/main/BackingTracks/A_Foggy_Day.mp3"> Download audio </a>
 						</audio>
 					</figure>
 					<button id="startRecordingButton" onclick="startRecording()">Start Recording</button>
@@ -63,8 +63,8 @@
 				<div class="panel" id="bluebossa" onclick="setBPM(130)">
 					<figure>
 						<figcaption>Listen for a bit:</figcaption>
-						<audio controls src="https://github.com/1618lip/JazzMIDIJam/raw/main/BackingTracks/Blue_Bossa.mp3">
-							<a href="https://github.com/1618lip/JazzMIDIJam/raw/main/BackingTracks/Blue_Bossa.mp3"> Download audio </a>
+						<audio controls src="https://github.com/1618lip/BackingTracks/raw/main/BackingTracks/Blue_Bossa.mp3">
+							<a href="https://github.com/1618lip/BackingTracks/raw/main/BackingTracks/Blue_Bossa.mp3"> Download audio </a>
 						</audio>
 					</figure>
 					<button id="startRecordingButton" onclick="startRecording()">Start Recording</button>
@@ -73,8 +73,8 @@
 				<div class="panel" id="confirmation" onclick="setBPM(205)">
 					<figure>
 						<figcaption>Listen for a bit:</figcaption>
-						<audio controls src="https://github.com/1618lip/JazzMIDIJam/raw/main/BackingTracks/Confirmation.mp3">
-							<a href="https://github.com/1618lip/JazzMIDIJam/raw/main/BackingTracks/Confirmation.mp3"> Download audio </a>
+						<audio controls src="https://github.com/1618lip/BackingTracks/raw/main/BackingTracks/Confirmation.mp3">
+							<a href="https://github.com/1618lip/BackingTracks/raw/main/BackingTracks/Confirmation.mp3"> Download audio </a>
 						</audio>
 					</figure>
 					<button id="startRecordingButton" onclick="startRecording()">Start Recording</button>
@@ -83,8 +83,8 @@
 				<div class="panel" id="donnalee" onclick="setBPM(185)">
 					<figure>
 						<figcaption>Listen for a bit:</figcaption>
-						<audio controls src="https://github.com/1618lip/JazzMIDIJam/raw/main/BackingTracks/Donna_Lee.mp3">
-							<a href="https://github.com/1618lip/JazzMIDIJam/raw/main/BackingTracks/Donna_Lee.mp3"> Download audio </a>
+						<audio controls src="https://github.com/1618lip/BackingTracks/raw/main/BackingTracks/Donna_Lee.mp3">
+							<a href="https://github.com/1618lip/BackingTracks/raw/main/BackingTracks/Donna_Lee.mp3"> Download audio </a>
 						</audio>
 					</figure>
 					<button id="startRecordingButton" onclick="startRecording()">Start Recording</button>
@@ -93,8 +93,8 @@
 				<div class="panel" id="giantsteps" onclick="setBPM(200)">
 					<figure>
 						<figcaption>Listen for a bit:</figcaption>
-						<audio controls src="https://github.com/1618lip/JazzMIDIJam/raw/main/BackingTracks/Giant_Steps.mp3">
-							<a href="https://github.com/1618lip/JazzMIDIJam/raw/main/BackingTracks/Giant_Steps.mp3"> Download audio </a>
+						<audio controls src="https://github.com/1618lip/BackingTracks/raw/main/BackingTracks/Giant_Steps.mp3">
+							<a href="https://github.com/1618lip/BackingTracks/raw/main/BackingTracks/Giant_Steps.mp3"> Download audio </a>
 						</audio>
 					</figure>
 					<button id="startRecordingButton" onclick="startRecording()">Start Recording</button>
@@ -103,8 +103,8 @@
 				<div class="panel" id="justfriends" onclick="setBPM(190)">
 					<figure>
 						<figcaption>Listen for a bit:</figcaption>
-						<audio controls src="https://github.com/1618lip/JazzMIDIJam/raw/main/BackingTracks/Just_Friends.mp3">
-							<a href="https://github.com/1618lip/JazzMIDIJam/raw/main/BackingTracks/Just_Friends.mp3"> Download audio </a>
+						<audio controls src="https://github.com/1618lip/BackingTracks/raw/main/BackingTracks/Just_Friends.mp3">
+							<a href="https://github.com/1618lip/BackingTracks/raw/main/BackingTracks/Just_Friends.mp3"> Download audio </a>
 						</audio>
 					</figure>
 					<button id="startRecordingButton" onclick="startRecording()">Start Recording</button>
