--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
 				</ul>
 			</div>
 		</div>
-		<div class="panel" id="afoggyday" onclick="setBPM(130)">
+		<div class="panel" id="afoggyday" onclick="setBPM(130); activateButton('afoggyday')">
 			<figure>
 				<figcaption>Listen for a bit:</figcaption>
 				<audio controls id="audioPlayer" src="https://github.com/1618lip/BackingTracks/raw/main/BackingTracks/A_Foggy_Day.mp3">
@@ -61,7 +61,7 @@
 			<button id="startRecordingButton" onclick="startRecording()">Start Recording</button>
 			<div id="countdown"></div>
 		</div>
-		<div class="panel" id="bluebossa" onclick="setBPM(130)">
+		<div class="panel" id="bluebossa" onclick="setBPM(130); activateButton('bluebossa')">
 			<figure>
 				<figcaption>Listen for a bit:</figcaption>
 				<audio controls src="https://github.com/1618lip/BackingTracks/raw/main/BackingTracks/Blue_Bossa.mp3">
@@ -71,7 +71,7 @@
 			<button id="startRecordingButton" onclick="startRecording()">Start Recording</button>
 			<div id="countdown"></div>
 		</div>
-		<div class="panel" id="confirmation" onclick="setBPM(205)">
+		<div class="panel" id="confirmation" onclick="setBPM(205); activateButton('confirmation')">
 			<figure>
 				<figcaption>Listen for a bit:</figcaption>
 				<audio controls src="https://github.com/1618lip/BackingTracks/raw/main/BackingTracks/Confirmation.mp3">
@@ -81,7 +81,7 @@
 			<button id="startRecordingButton" onclick="startRecording()">Start Recording</button>
 			<div id="countdown"></div>
 		</div>
-		<div class="panel" id="donnalee" onclick="setBPM(185)">
+		<div class="panel" id="donnalee" onclick="setBPM(185); activateButton('donnalee')">
 			<figure>
 				<figcaption>Listen for a bit:</figcaption>
 				<audio controls src="https://github.com/1618lip/BackingTracks/raw/main/BackingTracks/Donna_Lee.mp3">
@@ -91,7 +91,7 @@
 			<button id="startRecordingButton" onclick="startRecording()">Start Recording</button>
 			<div id="countdown"></div>
 		</div>
-		<div class="panel" id="giantsteps" onclick="setBPM(200)">
+		<div class="panel" id="giantsteps" onclick="setBPM(200); activateButton('giantsteps')">
 			<figure>
 				<figcaption>Listen for a bit:</figcaption>
 				<audio controls src="https://github.com/1618lip/BackingTracks/raw/main/BackingTracks/Giant_Steps.mp3">
@@ -101,7 +101,7 @@
 			<button id="startRecordingButton" onclick="startRecording()">Start Recording</button>
 			<div id="countdown"></div>
 		</div>
-		<div class="panel" id="justfriends" onclick="setBPM(190)">
+		<div class="panel" id="justfriends" onclick="setBPM(190); activateButton('justfriends')">
 			<figure>
 				<figcaption>Listen for a bit:</figcaption>
 				<audio controls src="https://github.com/1618lip/BackingTracks/raw/main/BackingTracks/Just_Friends.mp3">
@@ -331,10 +331,46 @@
 		}
 		}
 		//****************************************************
-		
+		let isRecording = false;
+    	let activeButtonId = null;
+
+    	function activateButton(buttonId) {
+			if (!isRecording) {
+				if (activeButtonId) {
+					document.getElementById(activeButtonId).disabled = false;
+				}
+				document.getElementById(buttonId).disabled = true;
+				activeButtonId = buttonId;
+			}
+		}
+		function toggleRecording() {
+        isRecording = !isRecording;
+
+        // Get all buttons with class 'midiButton'
+        const midiButtons = document.querySelectorAll('.tabs');
+
+        if (isRecording) {
+            // Disable all buttons when recording starts
+            midiButtons.forEach(button => {
+                button.disabled = true;
+            });
+        } else {
+            // Enable the previously active button when recording stops
+            if (activeButtonId) {
+                document.getElementById(activeButtonId).disabled = false;
+            }
+        }
+
+        if (isRecording) {
+            console.log('Start recording MIDI...');
+        } else {
+            console.log('Stop recording MIDI.');
+        }
+    }
 		let countdownValue = 4; // Set the countdown duration in seconds
 
 		function startRecording() {
+			isRecording = !isRecording;
 			// Hide the audio player and show the countdown
 			document.getElementById('audioPlayer').style.display = 'none';
 			document.getElementById('startRecordingButton').style.display = 'none';
@@ -344,7 +380,7 @@
 			let countdownInterval = setInterval(function () {
 				document.getElementById('countdown').innerHTML = countdownValue;
 				countdownValue--;
-
+			
 				if (countdownValue < 0) {
 					// Display the audio player, hide the countdown, and start playing the audio
 					document.getElementById('audioPlayer').style.display = 'block';
@@ -365,85 +401,85 @@
 	</script>
 	<script>
 		/* midi.js */
-function enableMIDI(element) {
-	const onMIDISuccess = (midiAccess) => {
-		for (var input of midiAccess.inputs.values()) input.onmidimessage = getMIDIMessage;
-	}
-	const getMIDIMessage = message => {
-		const [command, note, velocity] = message.data;
-		switch (command) {
-			case 144: // on
-				if (velocity > 0) {
-					const event = new CustomEvent('noteon', { detail: { note, velocity }});
-					element.dispatchEvent(event)
+		function enableMIDI(element) {
+			const onMIDISuccess = (midiAccess) => {
+				for (var input of midiAccess.inputs.values()) input.onmidimessage = getMIDIMessage;
+			}
+			const getMIDIMessage = message => {
+				const [command, note, velocity] = message.data;
+				switch (command) {
+					case 144: // on
+						if (velocity > 0) {
+							const event = new CustomEvent('noteon', { detail: { note, velocity }});
+							element.dispatchEvent(event)
+						}
+					break;
+					case 128: // off
+						const event = new CustomEvent('noteoff', { detail: { note }});
+						element.dispatchEvent(event)
+					break;
 				}
-			break;
-			case 128: // off
-				const event = new CustomEvent('noteoff', { detail: { note }});
-				element.dispatchEvent(event)
-			break;
+			}
+			if (navigator.requestMIDIAccess) {
+				navigator.requestMIDIAccess().then(onMIDISuccess, () => console.log('Could not access your MIDI devices.'));
+			}
 		}
-	}
-	if (navigator.requestMIDIAccess) {
-		navigator.requestMIDIAccess().then(onMIDISuccess, () => console.log('Could not access your MIDI devices.'));
-	}
-}
+		
+		/* audio.js */
+		const audioCtx = new (window.AudioContext || window.webkitAudioContext)
+		const gainNode = audioCtx.createGain()
+		const notemap = new Map();
+		gainNode.connect(audioCtx.destination);
 
-/* audio.js */
-const audioCtx = new (window.AudioContext || window.webkitAudioContext)
-const gainNode = audioCtx.createGain()
-const notemap = new Map();
-gainNode.connect(audioCtx.destination);
+		function createOscillator(freq) {
+		const oscNode = audioCtx.createOscillator()
+		oscNode.type = 'sine'
+		oscNode.frequency.value = freq
+		oscNode.connect(gainNode)
+		return oscNode
+		}
 
-function createOscillator(freq) {
-  const oscNode = audioCtx.createOscillator()
-  oscNode.type = 'sine'
-  oscNode.frequency.value = freq
-  oscNode.connect(gainNode)
-  return oscNode
-}
+		function noteon(key) {
+		if (!key.classList.contains('keydown')) {
+			gainNode.gain.value = 0.33
+			notemap.set(key.name, createOscillator(key.dataset.freq))
+			notemap.get(key.name).start(0)
+			key.classList.add('keydown')
+		}
+		}
 
-function noteon(key) {
-  if (!key.classList.contains('keydown')) {
-    gainNode.gain.value = 0.33
-    notemap.set(key.name, createOscillator(key.dataset.freq))
-    notemap.get(key.name).start(0)
-    key.classList.add('keydown')
-  }
-}
-
-function noteoff(key) {
-  key.classList.remove('keydown')
-  const oscNode = notemap.get(key.name)
-  if (oscNode) oscNode.stop(0)
-  notemap.delete(key.name)
-}
+		function noteoff(key) {
+		key.classList.remove('keydown')
+		const oscNode = notemap.get(key.name)
+		if (oscNode) oscNode.stop(0)
+		notemap.delete(key.name)
+		}
 
 
-/* init */
-enableMIDI(midi);
+		/* init */
+		enableMIDI(midi);
 
-midi.addEventListener('noteon', (event) => {
-  const note = midi.elements[`midi_${event.detail.note}`]
-  note.style.setProperty('--v', event.detail.velocity)
-  noteon(note, [{freq: note.dataset.freq}])
-})
+		midi.addEventListener('noteon', (event) => {
+		const note = midi.elements[`midi_${event.detail.note}`]
+		note.style.setProperty('--v', event.detail.velocity)
+		noteon(note, [{freq: note.dataset.freq}])
+		})
 
-midi.addEventListener('noteoff', (event) => {
-  const note = midi.elements[`midi_${event.detail.note}`]
-  noteoff(note)
-})
+		midi.addEventListener('noteoff', (event) => {
+		const note = midi.elements[`midi_${event.detail.note}`]
+		noteoff(note)
+		})
 
-midi.addEventListener('submit', event => event.preventDefault())
+		midi.addEventListener('submit', event => event.preventDefault())
 
-const keys = midi.querySelectorAll('button');
-keys.forEach(key => {
-  key.addEventListener('pointerdown', event => {
-    noteon(event.target, [{freq: event.target.dataset.freq}])
-  })
-  key.addEventListener('pointerup', event => { noteoff(event.target) })
-  key.addEventListener('pointerleave', event => { noteoff(event.target) })
-})
+		const keys = midi.querySelectorAll('button');
+		keys.forEach(key => {
+		key.addEventListener('pointerdown', event => {
+			noteon(event.target, [{freq: event.target.dataset.freq}])
+		})
+		key.addEventListener('pointerup', event => { noteoff(event.target) })
+		key.addEventListener('pointerleave', event => { noteoff(event.target) })
+		})
 	</script>
 	<script src="lib/FileSaver.js"></script>
 	<script src="lib/popper-2.11.5.js"></script>
