--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-	<link rel="icon" type="image/png" sizes="32x32" href="https://t4.ftcdn.net/jpg/03/51/20/39/240_F_351203909_Ylk0KUOOBR8IKwurq6KbZyYufzDjZrqx.jpg">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://t4.ftcdn.net/jpg/03/51/20/39/240_F_351203909_Ylk0KUOOBR8IKwurq6KbZyYufzDjZrqx.jpg">
 	<link rel="manifest" href="/site.webmanifest">
 	<meta name="apple-mobile-web-app-title" content="JazzJam">
 	<meta name="application-name" content="JazzJam">
@@ -401,85 +401,119 @@
 	</script>
 	<script>
 		/* midi.js */
-		function enableMIDI(element) {
-			const onMIDISuccess = (midiAccess) => {
-				for (var input of midiAccess.inputs.values()) input.onmidimessage = getMIDIMessage;
-			}
-			const getMIDIMessage = message => {
-				const [command, note, velocity] = message.data;
-				switch (command) {
-					case 144: // on
-						if (velocity > 0) {
-							const event = new CustomEvent('noteon', { detail: { note, velocity }});
-							element.dispatchEvent(event)
-						}
-					break;
-					case 128: // off
-						const event = new CustomEvent('noteoff', { detail: { note }});
-						element.dispatchEvent(event)
-					break;
-				}
-			}
-			if (navigator.requestMIDIAccess) {
-				navigator.requestMIDIAccess().then(onMIDISuccess, () => console.log('Could not access your MIDI devices.'));
-			}
-		}
-		
-		/* audio.js */
-		const audioCtx = new (window.AudioContext || window.webkitAudioContext)
-		const gainNode = audioCtx.createGain()
-		const notemap = new Map();
-		gainNode.connect(audioCtx.destination);
+function enableMIDI(element) {
+  const onMIDISuccess = (midiAccess) => {
+    for (var input of midiAccess.inputs.values()) input.onmidimessage = getMIDIMessage;
+  }
+  const getMIDIMessage = message => {
+    const [command, note, velocity] = message.data;
+    switch (command) {
+      case 144: // on
+        if (velocity > 0) {
+          const event = new CustomEvent('noteon', { detail: { note, velocity } });
+          element.dispatchEvent(event);
+        }
+        break;
+      case 128: // off
+        const event = new CustomEvent('noteoff', { detail: { note } });
+        element.dispatchEvent(event);
+        break;
+    }
+  }
+  if (navigator.requestMIDIAccess) {
+    navigator.requestMIDIAccess().then(onMIDISuccess, () => console.log('Could not access your MIDI devices.'));
+  }
+}
 
-		function createOscillator(freq) {
-		const oscNode = audioCtx.createOscillator()
-		oscNode.type = 'sine'
-		oscNode.frequency.value = freq
-		oscNode.connect(gainNode)
-		return oscNode
-		}
+/* audio.js */
+const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+const masterGain = audioCtx.createGain();
+masterGain.connect(audioCtx.destination);
 
-		function noteon(key) {
-		if (!key.classList.contains('keydown')) {
-			gainNode.gain.value = 0.33
-			notemap.set(key.name, createOscillator(key.dataset.freq))
-			notemap.get(key.name).start(0)
-			key.classList.add('keydown')
-		}
-		}
+const maxPolyphony = 7;
 
-		function noteoff(key) {
-		key.classList.remove('keydown')
-		const oscNode = notemap.get(key.name)
-		if (oscNode) oscNode.stop(0)
-		notemap.delete(key.name)
-		}
+function createPianoOscillators(freq) {
+    const oscillators = [];
+    const baseFrequency = freq;
 
+    for (let i = 0; i < 3; i++) {
+        const oscNode = audioCtx.createOscillator();
+        oscNode.type = 'sine';
+        oscNode.frequency.value = baseFrequency * (i + 1);
 
-		/* init */
-		enableMIDI(midi);
+        const gainNode = audioCtx.createGain();
+        gainNode.gain.value = 1 / Math.pow(i + 1, 1.7); // Adjust the gain for each harmonic
 
-		midi.addEventListener('noteon', (event) => {
-		const note = midi.elements[`midi_${event.detail.note}`]
-		note.style.setProperty('--v', event.detail.velocity)
-		noteon(note, [{freq: note.dataset.freq}])
-		})
+        oscNode.connect(gainNode);
+        oscillators.push({ oscNode, gainNode });
+    }
 
-		midi.addEventListener('noteoff', (event) => {
-		const note = midi.elements[`midi_${event.detail.note}`]
-		noteoff(note)
-		})
+    const masterGainNode = audioCtx.createGain();
+    masterGainNode.gain.value = 0.2;
 
-		midi.addEventListener('submit', event => event.preventDefault())
+    oscillators.forEach(({ oscNode, gainNode }) => {
+        gainNode.connect(masterGainNode);
+        oscNode.start(0);
+    });
 
-		const keys = midi.querySelectorAll('button');
-		keys.forEach(key => {
-		key.addEventListener('pointerdown', event => {
-			noteon(event.target, [{freq: event.target.dataset.freq}])
-		})
-		key.addEventListener('pointerup', event => { noteoff(event.target) })
-		key.addEventListener('pointerleave', event => { noteoff(event.target) })
-		})
+    masterGainNode.connect(masterGain);
+
+    return { oscillators, masterGainNode };
+}
+
+const notemap = new Map();
+
+function noteon(key) {
+    if (!key.classList.contains('keydown') && notemap.size < maxPolyphony) {
+        const { oscillators, masterGainNode } = createPianoOscillators(key.dataset.freq);
+        key.classList.add('keydown');
+        notemap.set(key.name, { oscillators, masterGainNode });
+    }
+}
+
+function noteoff(key) {
+    key.classList.remove('keydown');
+    const { oscillators, masterGainNode } = notemap.get(key.name);
+
+    if (oscillators) {
+        const releaseTime = audioCtx.currentTime + 0.15;
+
+        masterGainNode.gain.setValueAtTime(masterGainNode.gain.value, audioCtx.currentTime);
+        masterGainNode.gain.linearRampToValueAtTime(0.01, releaseTime);
+
+        oscillators.forEach(({ oscNode }) => {
+            oscNode.stop(releaseTime);
+        });
+    }
+
+    notemap.delete(key.name);
+}
+
+/* init */
+enableMIDI(midi);
+
+midi.addEventListener('noteon', (event) => {
+  const note = midi.elements[`midi_${event.detail.note}`];
+  note.style.setProperty('--v', event.detail.velocity);
+  noteon(note, [{ freq: note.dataset.freq }]);
+});
+
+midi.addEventListener('noteoff', (event) => {
+  const note = midi.elements[`midi_${event.detail.note}`];
+  noteoff(note);
+});
+
+midi.addEventListener('submit', event => event.preventDefault());
+
+const keys = midi.querySelectorAll('button');
+keys.forEach(key => {
+  key.addEventListener('pointerdown', event => {
+    noteon(event.target, [{ freq: event.target.dataset.freq }]);
+  });
+  key.addEventListener('pointerup', event => { noteoff(event.target); });
+  key.addEventListener('pointerleave', event => { noteoff(event.target); });
+});
+
 	</script>
 	<script src="lib/FileSaver.js"></script>
 	<script src="lib/popper-2.11.5.js"></script>
